movie recommendation endpoint logic